LinKreta_POC_Repository/force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>