LinKreta_POC_Repository/force-app/main/default/objects/Case/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algeria (+213)</fullName>
            </value>
            <value>
                <fullName>Andorra (+376)</fullName>
            </value>
            <value>
                <fullName>Angola (+244)</fullName>
            </value>
            <value>
                <fullName>Anguilla (+1264)</fullName>
            </value>
            <value>
                <fullName>Antigua &amp; Barbuda (+1268)</fullName>
            </value>
            <value>
                <fullName>Argentina (+54)</fullName>
            </value>
            <value>
                <fullName>Armenia (+374)</fullName>
            </value>
            <value>
                <fullName>Aruba (+297)</fullName>
            </value>
            <value>
                <fullName>Australia (+61)</fullName>
            </value>
            <value>
                <fullName>Austria (+43)</fullName>
            </value>
            <value>
                <fullName>Azerbaijan (+994)</fullName>
            </value>
            <value>
                <fullName>Bahamas (+1242)</fullName>
            </value>
            <value>
                <fullName>Bahrain (+973)</fullName>
            </value>
            <value>
                <fullName>Bangladesh (+880)</fullName>
            </value>
            <value>
                <fullName>Barbados (+1246)</fullName>
            </value>
            <value>
                <fullName>Belarus (+375)</fullName>
            </value>
            <value>
                <fullName>Belgium (+32)</fullName>
            </value>
            <value>
                <fullName>Belize (+501)</fullName>
            </value>
            <value>
                <fullName>Benin (+229)</fullName>
            </value>
            <value>
                <fullName>Bermuda (+1441)</fullName>
            </value>
            <value>
                <fullName>Bhutan (+975)</fullName>
            </value>
            <value>
                <fullName>Bolivia (+591)</fullName>
            </value>
            <value>
                <fullName>Bosnia Herzegovina (+387)</fullName>
            </value>
            <value>
                <fullName>Botswana (+267)</fullName>
            </value>
            <value>
                <fullName>Brazil (+55)</fullName>
            </value>
            <value>
                <fullName>Brunei (+673)</fullName>
            </value>
            <value>
                <fullName>Bulgaria (+359)</fullName>
            </value>
            <value>
                <fullName>Burkina Faso (+226)</fullName>
            </value>
            <value>
                <fullName>Burundi (+257)</fullName>
            </value>
            <value>
                <fullName>Cambodia (+855)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>