LinKreta_POC_Repository/force-app/main/default/objects/Case/fields/Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>Account.ClientStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preliminary New Clients</relationshipLabel>
    <relationshipName>Preliminary_New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>