LinKreta_POC_Repository/force-app/main/default/objects/Case/fields/Integrated_Enquiry_Created__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Enquiry_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated Enquiry Created</label>
    <type>Checkbox</type>
</CustomField>