LinKreta_POC_Repository/force-app/main/default/objects/Case/fields/Is_Ready_For_Convert__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_For_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ready For Convert</label>
    <type>Checkbox</type>
</CustomField>