LinKreta_POC_Repository/force-app/main/default/objects/Case/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>