LinKreta_POC_Repository/force-app/main/default/objects/Case/listViews/Converted_Preliminary_Enquiries.listView-meta.xml
<ListView>
    <fullName>Converted_Preliminary_Enquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Converted to Enquiry</value>
    </filters>
    <label>Converted Preliminary Enquiries</label>
    <sharedTo>
        <group>C_M_Team</group>
    </sharedTo>
</ListView>